--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@
     gap: 20px;
     position: relative;
     top: 240px;
-    margin-left: 340px;
+    margin-left: 350px;
 }
 
 .grade-text1 a {
@@ -110,15 +110,85 @@
     text-decoration: none;
 }
 
+.grade-text3 {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    position: relative;
+    top: 200px;
+    margin-left: 360px;
+}
+
+.grade-text3 a {
+    color: rgb(9, 181, 249);
+    font-family: 'Poppins'; font-size: 18px;
+    text-decoration: none;
+}
+
+.grade-text4 {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    position: relative;
+    top: 180px;
+    margin-left: 1310px;
+}
+.grade-text4 a {
+    color: rgb(9, 181, 249);
+    font-family: 'Poppins'; font-size: 18px;
+    text-decoration: none;
+}
+
+.grade-text5 {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    position: relative;
+    top: 190px;
+    margin-left: 360px;
+}
+
+.grade-text5 a {
+    color: rgb(9, 181, 249);
+    font-family: 'Poppins'; font-size: 18px;
+    text-decoration: none;
+}
+
+.grade-text6 {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    position: relative;
+    top: 190px;
+    margin-left: 1310px;
+}
+.grade-text6 a {
+    color: rgb(9, 181, 249);
+    font-family: 'Poppins'; font-size: 18px;
+    text-decoration: none;
+}
+
 
 .img-grade {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 50px;
-    height: 770px;
+    top: 30px;
     width: 100%;
+}
+
+.img-mid {
+    width: 100%;
+
+}
+
+footer {
+
+    height: 500px;
+    width: 100%;
+    background-color: rgb(207, 204, 204);
+    margin-top: 20px;
 }
 
 
