--- a/styles.css
+++ b/styles.css
@@ -183,12 +183,68 @@
 
 }
 
-footer {
-
-    height: 500px;
+.carrousel {
     width: 100%;
-    background-color: rgb(207, 204, 204);
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 880px;
+    width: 100%;
+    background-color:rgb(240, 243, 247);
     margin-top: 20px;
 }
 
+.footer-p {
+    display: flex;
+    flex-direction: column;
+    max-width: 900px;
+    text-align: justify;
+    font-size: 13px;
+    color: rgb(133, 132, 132);
+    margin-bottom: 5px;
+}
+
+.footer-p p{
+    margin-bottom: 5px;
+
+}
+
+.footer-links{
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-links a {
+    display: flex;
+    flex-direction:column;
+    text-decoration: none;
+    color: rgb(63, 61, 61);
+    font-family: 'Poppins'; font-size: 12px;
+    margin-bottom: 5px;
+
+    
+}
+
+.footer-section{
+    display: flex;
+    flex-direction: row;
+    align-items: baseline ;
+    gap: 110px;
+}
+
+h4{
+    font-family: 'Poppins'; font-size: 12px;
+    margin-bottom: 5px;
+}
+
+hr {
+    width: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
 
